--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Instructions",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -c-1 ."
+    "start": "http-server -c-1 ./examples"
   },
   "repository": {
     "type": "git",
